namespaces/gitops-test.cloud-platform.service.justice.gov.uk/helloworld-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helloworld-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "moj-digital"
    cloud-platform.justice.gov.uk/application: "helloworld"
    cloud-platform.justice.gov.uk/owner: "jason: digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform-helloworld-ruby-app"
